# rent-a-car-dapp

./: .gitignore  08.md  10.md  DEPLOYMENT_STATUS.md  GITHUB_PAGES_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  WALLET_INTEGRATION_COMPLETE.md  environments.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
contracts/rent-a-car/: Cargo.toml
contracts/rent-a-car/src/: contract.rs  lib.rs
contracts/rent-a-car/src/interface/: contract.rs  mod.rs
contracts/rent-a-car/src/methods/token/: mod.rs  token.rs
contracts/rent-a-car/src/storage/: admin.rs  admin_balance.rs  admin_commission.rs  car.rs  contract_balance.rs  mod.rs  rental.rs  token.rs
contracts/rent-a-car/src/storage/structs/: car.rs  mod.rs  rental.rs
contracts/rent-a-car/src/storage/types/: car_status.rs  error.rs  mod.rs  storage.rs
contracts/rent-a-car/src/tests/: commission.rs
src/: App.tsx  index.css  main.tsx
src/components/: AccountCard.tsx  AccountManager.tsx  AddCarForm.tsx  BalanceTable.tsx  CarList.tsx
src/interfaces/: account.ts  car.ts  contract.ts  user-role.ts
src/pages/: Home.tsx  SignIn.tsx
src/providers/: StellarAccountProvider.tsx  WalletProvider.tsx
src/services/: stellar.service.ts  wallet.service.ts
src/utils/: constants.ts  local-storage.ts  shorten-address.ts  xlm-in-stroops.ts
